k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oliveyoung-api
  namespace: oliveyoung
  labels:
    app: oliveyoung-api
    tags.datadoghq.com/env: "prod"
    tags.datadoghq.com/service: "oliveyoung-api"
    tags.datadoghq.com/version: "1.0.0"
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: oliveyoung-api
  template:
    metadata:
      labels:
        app: oliveyoung-api
        tags.datadoghq.com/env: "prod"
        tags.datadoghq.com/service: "oliveyoung-api"
        tags.datadoghq.com/version: "1.0.0"
      annotations:
        # --- Prometheus ----
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
        # --- Datadog APM (트레이스 자동 주입) ---
        admission.datadoghq.com/java-lib.version: "latest"
        # --- Datadog 로그 수집 ---
        ad.datadoghq.com/oliveyoung-api.logs: |
          [
            {
              "source": "java",
              "service": "oliveyoung-api",
              "processing_rules": [
                {
                  "type": "exclude_at_match",
                  "name": "exclude_debug_only",
                  "pattern": ".*DEBUG.*"
                }
              ]
            }
          ]
        # --- Datadog 메트릭 수집 ---
        ad.datadoghq.com/oliveyoung-api.check_names: '["openmetrics"]'
        ad.datadoghq.com/oliveyoung-api.init_configs: '[{}]'
        ad.datadoghq.com/oliveyoung-api.instances: |
          [
            {
              "prometheus_url": "http://%%host%%:8080/actuator/prometheus",
              "namespace": "spring_boot",
              "metrics": ["*"]
            }
          ]
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: oliveyoung-api
                topologyKey: kubernetes.io/hostname
      containers:
        - name: oliveyoung-api
          # CI/CD에서 sed로 8b95b532를 커밋 SHA로 자동 교체
          # ArgoCD가 이 태그 변경을 감지하여 롤링 업데이트 수행
          image: 160884802838.dkr.ecr.ap-northeast-2.amazonaws.com/oliveyoung-api:b7d09d68
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 2
              memory: 2Gi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 75
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 15
            failureThreshold: 5
